# fault-injection

./: Cargo.toml  README.md
src/: lib.rs
src/can/: emulator.rs  message.rs  mod.rs
src/fault/: injector.rs  mod.rs  types.rs
src/logger/: mod.rs  sqlite.rs
src/runner/: critical.yaml  mod.rs  network_issues.yaml  scenario.rs
tests/: integration.rs
