[package]
name = "fault-injection"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
console = "0.16.3"
indicatif = "0.18.4"
rand = "0.10.1"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"
